--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -10,7 +10,10 @@
     <ul>
       {% for post in data.items %}
         <li>
-          {{post.id}}
+
+          <strong>{{post.description}}</strong>
+        <br/>
+          <img src="{{post.photo}}" width="300"/>
           <a href="/post/{{post.id}}">ver</a>
           <a href="/creator/?idPost={{post.id}}">editar</a>
         </li>
