blog single first vertion

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4138,6 +4138,58 @@ white = #fff
 					font-size 11px
 
 
+/*------------------------------------*
+	$ BLOG SINGLE
+*------------------------------------*/
+.blog-single-cover
+	height 300px
+	background-size cover
+	background-position center center
+	display: flex;
+	align-items: center;
+
+	.title
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 52px
+		padding-top 15px
+		color white
+		max-width 900px
+		margin auto
+
+	.tag
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 9px
+		color #fefefe
+		letter-spacing 1.5px
+		border-radius 4px
+		border solid 1px #ededed
+		padding 3px 6px
+
+	.info
+		margin-top 20px
+
+	.date
+		font-family: 'PT Serif', serif;
+		font-size 12px
+		color #cdd7d8
+
+	.social
+		font-family: 'Montserrat',sans-serif;
+		font-size 12px
+		color #cdd7d8
+
+	.share
+		font-family: 'Montserrat',sans-serif;
+		font-size 12px
+		color #cdd7d8
+		font-style italic
+		padding 9px 20px
+		border solid 1px #ededed
+		border-radius 17px
+
+
 
 /*------------------------------------*
 	$ LADING
