antes de pasar al branch blog

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4152,10 +4152,12 @@ white = #fff
 		font-family: 'Montserrat',sans-serif;
 		font-weight bold
 		font-size 52px
-		padding-top 15px
+		// padding-top 15px
+		padding-top 20px
 		color white
 		max-width 900px
 		margin auto
+		line-height 1.15
 
 	.tag
 		font-family: 'Montserrat',sans-serif;
