--- a/app/views/pages/feed.html
+++ b/app/views/pages/feed.html
@@ -10,10 +10,10 @@
 					<span class="tag">TRAVEL</span>
 					<p class="title">The Soul Of Siberia Hidden Beneath The Waters</p>
 					<div class="info">
-						<span class="date">June 11, 2014 9:26 pm</span>
-						<span class="social">54</span>
-						<span class="social">12</span>
-						<a class="share">93 shares</a>
+						<span class="date"><i class="bi_interface-clock"></i> June 11, 2014 9:26 pm</span>
+						<span class="social"><i class="fa fa-heart"></i> 54</span>
+						<span class="social"><i class="fa fa-comment"></i> 12</span>
+						<a class="share">93 shares <i class="bi_web-download"></i></a>
 					</div>
 				<!-- </div> -->
 			</div>
