--- a/app/views/blog/post.html
+++ b/app/views/blog/post.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Creator</title>
+    <title>Post nuevo</title>
     <link rel="stylesheet" href="/demo.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css">
