--- a/app/views/partials/elements/table-user-item.html
+++ b/app/views/partials/elements/table-user-item.html
@@ -1,4 +1,4 @@
-<script type="text/template" id="template-table">
+<script type="text/template" id="template-table-user">
   <tr>
     <td><img src='<%=photo%>' width="35"></td>
     <td><a href="http://am.local:3000/user/<%=username%>"><%=username%></a></td>
