add join sectino in landing

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4398,6 +4398,46 @@ white = #fff
 		justify-content space-between
 		margin-top 40px
 
+.lading-join
+	padding 110px 0
+	background-size cover
+	background-position center center
+	text-align center
+	position relative
+	.cover
+		position absolute
+		top 0
+		bottom 0
+		left 0
+		right 0
+		background rgba(black, .5)
+	.title
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 52px
+		color white
+	.subtitle
+		font-family: 'PT Serif', serif;
+		font-size 20px
+		color rgba(white, .69)
+		padding-top 25px
+		line-height 1.15
+	.input
+		background rgba(white, .15)
+		padding 13px 17px
+		color white
+		font-family: 'Montserrat',sans-serif;
+		font-size 14px
+		width 400px
+		margin-right 20px
+	.button
+		font-family: 'Montserrat',sans-serif;
+		font-size 10px
+		color white
+		letter-spacing 2px
+		padding 17px 50px
+		background #276cf2
+		border-radius 40px
 
 
 
