--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4199,19 +4199,24 @@ white = #fff
 .lading-banner-container
 	background charcoal-grey
 .lading-banner
-	display flex
-	align-items flex-end
+	// display flex
+	// align-items flex-end
 	.info
 	.images
 		flex 1
-		padding 20px
-		padding-bottom 0
+		// padding 20px
+		// padding-bottom 0
+	.images
+		max-width 400px
+		margin-left auto
+		margin-right auto
 	.title
 		font-family: 'Montserrat',sans-serif;
 		font-weight bold
 		font-size 48px
 		color white
 		line-height 1.15
+		margin-top 60px
 	.subtitle
 		font-family: 'PT Serif', serif;
 		font-size 19px
@@ -4228,10 +4233,26 @@ white = #fff
 		border-radius 40px
 		font-size 11px
 		color white
-		margin-bottom 170px
+		margin-top 40px
+		margin-bottom 80px
 	.images
 		img
 			height 600px
+
+@media (min-width: 840px)
+	.lading-banner
+		display flex
+		align-items flex-end
+		.info
+		.images
+			padding 20px
+			padding-bottom 0
+		.title
+			margin-top 130px
+		.button
+			margin-top 80px
+			margin-bottom 170px
+
 
 .landing-screens
 	padding-top 60px
@@ -4257,7 +4278,9 @@ white = #fff
 		.screen
 			flex 1
 			max-width 270px
-			margin auto
+			// margin auto
+			margin-left auto
+			margin-right auto
 		img
 			margin auto
 			display block
@@ -4278,7 +4301,7 @@ white = #fff
 			text-align center
 
 .lading-explanation
-	display flex
+	// display flex
 	max-width 1100px
 	margin auto
 	padding-top 80px
@@ -4290,10 +4313,10 @@ white = #fff
 		color charcoal-grey
 		line-height 1.1
 		flex 1
-		padding 20px
+		padding 20px 0
 	>.description
 		flex 1
-		padding 20px
+		padding 20px 0
 		.title
 			font-family: 'Montserrat',sans-serif;
 			font-weight bold
@@ -4308,9 +4331,19 @@ white = #fff
 			line-height 1.35
 			max-width 430px
 
+@media (min-width: 725px)
+	.lading-explanation
+		display flex
+		>.title
+		>.description
+			padding 20px
+
 .lading-features-container
 	background #277cea
 	padding-top 80px
+
+.lading-features-image
+	padding-bottom 20px
 
 .lading-features-options
 	>.title
@@ -4337,6 +4370,7 @@ white = #fff
 			font-size 10px
 			letter-spacing 2px
 			margin-top 10px
+			line-height 1.5
 		.description
 			font-size 13px
 			font-family: 'PT Serif', serif;
@@ -4350,12 +4384,13 @@ white = #fff
 	max-width 1050px
 	margin auto
 	.review
-		display flex
+		// display flex
 		.img
 			width 212px
 			height 212px
 			border-radius 50%
 			margin-right 80px
+			margin-bottom 20px
 		.content
 			.text
 				font-family: 'PT Serif', serif;
@@ -4380,6 +4415,11 @@ white = #fff
 						font-size 14px
 						color #656b6f
 						margin-top 5px
+
+@media (min-width: 700px)
+	.landing-reviews
+		.review
+			display flex
 
 .landing-partners
 	padding 90px 0
