landing for mobilwe

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4435,8 +4435,13 @@ white = #fff
 	.partners
 		display flex
 		align-items center
-		justify-content space-between
+		// justify-content space-between
+		justify-content space-around
 		margin-top 40px
+		flex-wrap wrap
+		img
+			max-width 50%
+			margin-top 20px
 
 .lading-join
 	padding 110px 0
