--- a/app/views/pages/landing.html
+++ b/app/views/pages/landing.html
@@ -7,9 +7,9 @@
 			<div class="grid-100">
 				<div class="lading-banner">
 					<div class="info">
-						<p class="title u-margin-top-130">Una plataforma para artistas visuales y almas independientes</p>
+						<p class="title">Una plataforma para artistas visuales y almas independientes</p>
 						<p class="subtitle u-margin-top-40">Una red social y marketplace para artistas visuales para mostrar, descubrir, comprar y vender tus obras y creaciones.</p>
-						<a href="#" class="button u-margin-top-80">REGÍSTRATE AHORA</a>
+						<a href="#" class="button">REGÍSTRATE AHORA</a>
 					</div>
 					<div class="images">
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450087317/general/lading-phones.png">
@@ -70,9 +70,9 @@
 					<p class="title">Una plataforma a tu medida</p>
 					<div class="options">
 						<div class="option">
-							<div class="option-left">
+							<!-- <div class="option-left">
 								<i class="bi_interface-arrow-right"></i>
-							</div>
+							</div> -->
 							<div class="option-right">
 								<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450158371/general/lading-feature-1.svg">
 								<p class="title">CREA  TU PORTAFOLIO</p>
@@ -80,9 +80,9 @@
 							</div>
 						</div>
 						<div class="option">
-							<div class="option-left">
+							<!-- <div class="option-left">
 								<i class="bi_interface-arrow-right"></i>
-							</div>
+							</div> -->
 							<div class="option-right">
 								<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450158371/general/lading-feature-2.svg">
 								<p class="title">VALORA Y COLECCIONA</p>
@@ -90,9 +90,9 @@
 							</div>
 						</div>
 						<div class="option">
-							<div class="option-left">
+							<!-- <div class="option-left">
 								<i class="bi_interface-arrow-right"></i>
-							</div>
+							</div> -->
 							<div class="option-right">
 								<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450158371/general/lading-feature-3.svg">
 								<p class="title">DESCUBRE NUEVO ARTE</p>
@@ -100,9 +100,9 @@
 							</div>
 						</div>
 						<div class="option">
-							<div class="option-left">
+							<!-- <div class="option-left">
 								<i class="bi_interface-arrow-right"></i>
-							</div>
+							</div> -->
 							<div class="option-right">
 								<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450158371/general/lading-feature-4.svg">
 								<p class="title">SIGUE A TUS ARTISTAS</p>
@@ -110,9 +110,9 @@
 							</div>
 						</div>
 						<div class="option">
-							<div class="option-left">
+							<!-- <div class="option-left">
 								<i class="bi_interface-arrow-right"></i>
-							</div>
+							</div> -->
 							<div class="option-right">
 								<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450158371/general/lading-feature-5.svg">
 								<p class="title">ART FEED</p>
@@ -120,9 +120,9 @@
 							</div>
 						</div>
 						<div class="option">
-							<div class="option-left">
+							<!-- <div class="option-left">
 								<i class="bi_interface-arrow-right"></i>
-							</div>
+							</div> -->
 							<div class="option-right">
 								<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450158371/general/lading-feature-6.svg">
 								<p class="title">TIENDA EN LÍNEA</p>
@@ -175,7 +175,7 @@
 			<div class="grid-100">
 				<p class="title">Únete ahora</p>
 				<p class="subtitle">Y encuentra a miles de artistas <br> con tus mismos intereses</p>
-				<div style="margin-top: 60px;">
+				<div style="margin-top: 40px;">
 					<input class="input" placeholder="E-Mail"></input>
 					<a href="#" class="button">UNIRME</a>
 				</div>
