--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4138,6 +4138,60 @@ white = #fff
 					font-size 11px
 
 
+/*------------------------------------*
+	$ BLOG SINGLE
+*------------------------------------*/
+.blog-single-cover
+	height 300px
+	background-size cover
+	background-position center center
+	display: flex;
+	align-items: center;
+
+	.title
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 52px
+		// padding-top 15px
+		padding-top 20px
+		color white
+		max-width 900px
+		margin auto
+		line-height 1.15
+
+	.tag
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 9px
+		color #fefefe
+		letter-spacing 1.5px
+		border-radius 4px
+		border solid 1px #ededed
+		padding 3px 6px
+
+	.info
+		margin-top 20px
+
+	.date
+		font-family: 'PT Serif', serif;
+		font-size 12px
+		color #cdd7d8
+
+	.social
+		font-family: 'Montserrat',sans-serif;
+		font-size 12px
+		color #cdd7d8
+
+	.share
+		font-family: 'Montserrat',sans-serif;
+		font-size 12px
+		color #cdd7d8
+		font-style italic
+		padding 9px 20px
+		border solid 1px #ededed
+		border-radius 17px
+
+
 
 /*------------------------------------*
 	$ LADING
@@ -4145,19 +4199,24 @@ white = #fff
 .lading-banner-container
 	background charcoal-grey
 .lading-banner
-	display flex
-	align-items flex-end
+	// display flex
+	// align-items flex-end
 	.info
 	.images
 		flex 1
-		padding 20px
-		padding-bottom 0
+		// padding 20px
+		// padding-bottom 0
+	.images
+		max-width 400px
+		margin-left auto
+		margin-right auto
 	.title
 		font-family: 'Montserrat',sans-serif;
 		font-weight bold
 		font-size 48px
 		color white
 		line-height 1.15
+		margin-top 60px
 	.subtitle
 		font-family: 'PT Serif', serif;
 		font-size 19px
@@ -4174,10 +4233,26 @@ white = #fff
 		border-radius 40px
 		font-size 11px
 		color white
-		margin-bottom 170px
+		margin-top 40px
+		margin-bottom 80px
 	.images
 		img
 			height 600px
+
+@media (min-width: 840px)
+	.lading-banner
+		display flex
+		align-items flex-end
+		.info
+		.images
+			padding 20px
+			padding-bottom 0
+		.title
+			margin-top 130px
+		.button
+			margin-top 80px
+			margin-bottom 170px
+
 
 .landing-screens
 	padding-top 60px
@@ -4203,7 +4278,9 @@ white = #fff
 		.screen
 			flex 1
 			max-width 270px
-			margin auto
+			// margin auto
+			margin-left auto
+			margin-right auto
 		img
 			margin auto
 			display block
@@ -4224,7 +4301,7 @@ white = #fff
 			text-align center
 
 .lading-explanation
-	display flex
+	// display flex
 	max-width 1100px
 	margin auto
 	padding-top 80px
@@ -4236,10 +4313,10 @@ white = #fff
 		color charcoal-grey
 		line-height 1.1
 		flex 1
-		padding 20px
+		padding 20px 0
 	>.description
 		flex 1
-		padding 20px
+		padding 20px 0
 		.title
 			font-family: 'Montserrat',sans-serif;
 			font-weight bold
@@ -4254,9 +4331,19 @@ white = #fff
 			line-height 1.35
 			max-width 430px
 
+@media (min-width: 725px)
+	.lading-explanation
+		display flex
+		>.title
+		>.description
+			padding 20px
+
 .lading-features-container
 	background #277cea
 	padding-top 80px
+
+.lading-features-image
+	padding-bottom 20px
 
 .lading-features-options
 	>.title
@@ -4283,6 +4370,7 @@ white = #fff
 			font-size 10px
 			letter-spacing 2px
 			margin-top 10px
+			line-height 1.5
 		.description
 			font-size 13px
 			font-family: 'PT Serif', serif;
@@ -4296,12 +4384,13 @@ white = #fff
 	max-width 1050px
 	margin auto
 	.review
-		display flex
+		// display flex
 		.img
 			width 212px
 			height 212px
 			border-radius 50%
 			margin-right 80px
+			margin-bottom 20px
 		.content
 			.text
 				font-family: 'PT Serif', serif;
@@ -4327,6 +4416,11 @@ white = #fff
 						color #656b6f
 						margin-top 5px
 
+@media (min-width: 700px)
+	.landing-reviews
+		.review
+			display flex
+
 .landing-partners
 	padding 90px 0
 	max-width 1050px
@@ -4341,9 +4435,66 @@ white = #fff
 	.partners
 		display flex
 		align-items center
-		justify-content space-between
-		margin-top 40px
+		// justify-content space-between
+		justify-content space-around
+		margin-top 20px
+		flex-wrap: wrap;
+		img
+			max-width 50%
+			margin-top 20px
 
+.lading-join
+	padding 110px 0
+	background-size cover
+	background-position center center
+	text-align center
+	position relative
+	.cover
+		position absolute
+		top 0
+		bottom 0
+		left 0
+		right 0
+		background rgba(black, .5)
+	.title
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 52px
+		color white
+	.subtitle
+		font-family: 'PT Serif', serif;
+		font-size 20px
+		color rgba(white, .69)
+		padding-top 25px
+		line-height 1.15
+	.input
+		background rgba(white, .15)
+		padding 13px 17px
+		color white
+		font-family: 'Montserrat',sans-serif;
+		font-size 14px
+		width 250px
+		// margin-right 20px
+	.button
+		font-family: 'Montserrat',sans-serif;
+		font-size 10px
+		color white
+		letter-spacing 2px
+		padding 17px 50px
+		background #276cf2
+		border-radius 40px
+		display inline-block
+		margin-top 20px
+
+@media (min-width: 500px)
+	.lading-join
+		.input
+			width 400px
+
+@media (min-width: 760px)
+	.lading-join
+		.input
+			margin-right 20px
 
 
 
