--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4192,6 +4192,132 @@ white = #fff
 		border-radius 17px
 
 
+.blog-single-user
+	display flex
+	align-items center
+	max-width: 700px;
+	margin 0 auto 2em auto
+	padding 25px 0
+	border-top: solid 1px #ddd;
+	border-bottom: solid 1px #ddd;
+	img
+		border-radius 50%
+		width 60px
+		min-width 60px
+		height 60px
+	.info
+		flex 1
+		margin-left 20px
+		.name
+			font-family: 'Montserrat',sans-serif;
+			font-weight bold
+			letter-spacing 2px
+			font-size 11px
+			color charcoal-grey
+		.description
+			font-family: 'PT Serif', serif;
+			font-size 16px
+			color #838c8d
+			margin-top 5px
+	.button
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 13.3px
+		color #666
+		letter-spacing 2px
+		padding 10px 25px
+		border-radius 4px
+		border solid 1px #ddd
+		margin-left 20px
+
+.blog-single-popular
+	background #27282a
+	padding 20px 0 50px 0
+	.title
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 22px
+		color white
+		text-align center
+		margin 20px 0
+	.articles
+		display flex
+		justify-content center
+		.article
+			background white
+			max-width 230px
+			border-radius 4px
+			margin 10px
+			.image
+				height 170px
+				position relative
+				.tag
+					position absolute
+					top 20px
+					left 20px
+					font-family: 'Montserrat',sans-serif;
+					font-weight bold
+					color white
+					font-size 10px
+					letter-spacing 1px
+					padding 4px 5px 2px 5px
+					border-radius 3px
+					&.orange
+						background #d8a252
+					&.green
+						background #007ac2
+					&.purple
+						background #e98fff
+					&.blue
+						background #6b3de4
+			.info
+				padding 18px
+			.title
+				font-family: 'Montserrat',sans-serif;
+				font-weight bold
+				font-size 15px
+				color #3b3d40
+				text-align left
+				line-height 1.15
+				margin 0
+			.description
+				font-family: 'PT Serif', serif;
+				font-size 14px
+				color #838d8f
+				margin-top 5px
+				line-height 1.15
+
+
+.editable
+	max-width: 700px;
+	margin auto
+	// margin-left: auto !important;
+	// margin-right: auto !important;
+	h2
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 30px
+		color #3b3d40
+		line-height: 1.5;
+	p
+		font-family: 'PT Serif', serif;
+		font-size 21px
+		color #666d70
+		line-height 1.5
+		margin-bottom 20px
+
+	blockquote
+		font-family: 'PT Serif', serif;
+		font-style italic
+		line-height 1.35
+		padding-left 20px
+		font-size 24px
+		color #61565a
+		border-left: 4px solid #61565a
+		margin 30px 0
+		margin-left 40px
+
+
 
 /*------------------------------------*
 	$ LADING
