--- a/app/views/blog/post.html
+++ b/app/views/blog/post.html
@@ -91,6 +91,23 @@
 
     <div class="grid-container">
         <div class="grid-100">
+            <div class="blog-single-socials">
+                <div class="tags">
+                    <span class="tag">TRAVEL</span>&nbsp;
+                    <span class="tag">BAIKAL</span>&nbsp;
+                    <span class="tag">LAKE</span>
+                </div>
+                <div class="buttons">
+                    <a href="#" class="button white"><i class="fa fa-heart"></i>&nbsp;&nbsp; LIKE &nbsp;&nbsp;<span>2</span></a>
+                    <a href="#" class="button blue"><i class="fa fa-facebook"></i>&nbsp;&nbsp; SHARE</a>
+                    <a href="#" class="button sky-blue"><i class="fa fa-twitter"></i>&nbsp;&nbsp; TWEET</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="grid-container">
+        <div class="grid-100">
             <div class="blog-single-user">
                 <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_diegorossell.jpg">
                 <div class="info">
@@ -108,7 +125,7 @@
                 <p class="title">Artículos populares</p>
                 <div class="articles">
                     <div class="article">
-                        <div class="image">
+                        <div class="image" style="background-image: url('/img/oto blog 1.png')">
                             <span class="tag orange">EXPLORERS</span>
                         </div>
                         <div class="info">
@@ -117,7 +134,7 @@
                         </div>
                     </div>
                     <div class="article">
-                        <div class="image">
+                        <div class="image" style="background-image: url('/img/oto blog 1.png')">
                             <span class="tag green">SCIENCE</span>
                         </div>
                         <div class="info">
@@ -126,7 +143,7 @@
                         </div>
                     </div>
                     <div class="article">
-                        <div class="image">
+                        <div class="image" style="background-image: url('/img/oto blog 1.png')">
                             <span class="tag purple">SCIENCE</span>
                         </div>
                         <div class="info">
@@ -135,7 +152,7 @@
                         </div>
                     </div>
                     <div class="article">
-                        <div class="image">
+                        <div class="image" style="background-image: url('/img/oto blog 1.png')">
                             <span class="tag blue">TRAVEL</span>
                         </div>
                         <div class="info">
