--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -1,7 +1,7 @@
 {% extends '../partials/base.html' %}
 
 {% block elements %}
-
+<!--
     <a href="/blog/creator">nuevo</a>
 
     <ul>
@@ -14,7 +14,7 @@
           <a href="/blog/creator/?idPost={{post.id}}">editar</a>
         </li>
       {% endfor %}
-    </ul>
+    </ul> -->
 
   <!-- ********************************************************************
     $ BLOG HEADER
@@ -71,6 +71,7 @@
   <div class="grid-container u-margin-top-10">
     <div class="grid-100 grid-parent">
       <div class="blog-articles-container">
+
         <div class="blog-article-container large">
           <article class="blog-article">
             <header class="header" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450852734/general/blog-cover-1.png')">
@@ -94,6 +95,7 @@
             </footer>
           </article>
         </div>
+
         <div class="blog-article-container large">
           <article class="blog-article">
             <header class="header" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450852734/general/blog-cover-1.png')">
@@ -134,148 +136,8 @@
 
   <div class="grid-container u-margin-top-10">
     <div class="grid-100 grid-parent">
-
-      <div class="blog-articles-container">
-        <div class="blog-article-container">
-          <article class="blog-article">
-            <header class="header" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450852734/general/blog-cover-1.png')">
-              <span class="tag">NATURE</span>
-              <div class="inner">
-                <p class="title">Offbeat Portraits Give Stars a New Turn</p>
-                <div class="stats u-margin-top-15">
-                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;54</p>
-                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;12</p>
-                </div>
-              </div>
-            </header>
-            <p class="content">I whipped the Scotch tape from my pocket and said y ahora lo que hay que hacer es que todo tenga coherencia para que se puedan ver las cosas bajo.</p>
-            <footer class="footer">
-              <p class="date"><i class="bi_interface-clock"></i> June 11, 2014</p>
-              <span class="author">
-                <p>Por&nbsp;&nbsp;</p>
-                <img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448493683/qujhapblpptr30wjrj3l.jpg">
-                <P>&nbsp;ARTE MANIFIESTO</P>
-              </span>
-            </footer>
-          </article>
-        </div>
-        <div class="blog-article-container">
-          <article class="blog-article">
-            <header class="header" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450852734/general/blog-cover-1.png')">
-              <span class="tag">NATURE</span>
-              <div class="inner">
-                <p class="title">Offbeat Portraits Give Stars a New Turn</p>
-                <div class="stats u-margin-top-15">
-                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;54</p>
-                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;12</p>
-                </div>
-              </div>
-            </header>
-            <p class="content">I whipped the Scotch tape from my pocket and said y ahora lo que hay que hacer es que todo tenga coherencia para que se puedan ver las cosas bajo.</p>
-            <footer class="footer">
-              <p class="date"><i class="bi_interface-clock"></i> June 11, 2014</p>
-              <span class="author">
-                <p>Por&nbsp;&nbsp;</p>
-                <img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448493683/qujhapblpptr30wjrj3l.jpg">
-                <P>&nbsp;ARTE MANIFIESTO</P>
-              </span>
-            </footer>
-          </article>
-        </div>
-        <div class="blog-article-container">
-          <article class="blog-article">
-            <header class="header" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450852734/general/blog-cover-1.png')">
-              <span class="tag">NATURE</span>
-              <div class="inner">
-                <p class="title">Offbeat Portraits Give Stars a New Turn</p>
-                <div class="stats u-margin-top-15">
-                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;54</p>
-                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;12</p>
-                </div>
-              </div>
-            </header>
-            <p class="content">I whipped the Scotch tape from my pocket and said y ahora lo que hay que hacer es que todo tenga coherencia para que se puedan ver las cosas bajo.</p>
-            <footer class="footer">
-              <p class="date"><i class="bi_interface-clock"></i> June 11, 2014</p>
-              <span class="author">
-                <p>Por&nbsp;&nbsp;</p>
-                <img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448493683/qujhapblpptr30wjrj3l.jpg">
-                <P>&nbsp;ARTE MANIFIESTO</P>
-              </span>
-            </footer>
-          </article>
-        </div>
-        <div class="blog-article-container">
-          <article class="blog-article">
-            <header class="header" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450852734/general/blog-cover-1.png')">
-              <span class="tag">NATURE</span>
-              <div class="inner">
-                <p class="title">Offbeat Portraits Give Stars a New Turn</p>
-                <div class="stats u-margin-top-15">
-                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;54</p>
-                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;12</p>
-                </div>
-              </div>
-            </header>
-            <p class="content">I whipped the Scotch tape from my pocket and said y ahora lo que hay que hacer es que todo tenga coherencia para que se puedan ver las cosas bajo.</p>
-            <footer class="footer">
-              <p class="date"><i class="bi_interface-clock"></i> June 11, 2014</p>
-              <span class="author">
-                <p>Por&nbsp;&nbsp;</p>
-                <img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448493683/qujhapblpptr30wjrj3l.jpg">
-                <P>&nbsp;ARTE MANIFIESTO</P>
-              </span>
-            </footer>
-          </article>
-        </div>
-        <div class="blog-article-container">
-          <article class="blog-article">
-            <header class="header" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450852734/general/blog-cover-1.png')">
-              <span class="tag">NATURE</span>
-              <div class="inner">
-                <p class="title">Offbeat Portraits Give Stars a New Turn</p>
-                <div class="stats u-margin-top-15">
-                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;54</p>
-                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;12</p>
-                </div>
-              </div>
-            </header>
-            <p class="content">I whipped the Scotch tape from my pocket and said y ahora lo que hay que hacer es que todo tenga coherencia para que se puedan ver las cosas bajo.</p>
-            <footer class="footer">
-              <p class="date"><i class="bi_interface-clock"></i> June 11, 2014</p>
-              <span class="author">
-                <p>Por&nbsp;&nbsp;</p>
-                <img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448493683/qujhapblpptr30wjrj3l.jpg">
-                <P>&nbsp;ARTE MANIFIESTO</P>
-              </span>
-            </footer>
-          </article>
-        </div>
-        <div class="blog-article-container">
-          <article class="blog-article">
-            <header class="header" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450852734/general/blog-cover-1.png')">
-              <span class="tag">NATURE</span>
-              <div class="inner">
-                <p class="title">Offbeat Portraits Give Stars a New Turn</p>
-                <div class="stats u-margin-top-15">
-                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;54</p>
-                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;12</p>
-                </div>
-              </div>
-            </header>
-            <p class="content">I whipped the Scotch tape from my pocket and said y ahora lo que hay que hacer es que todo tenga coherencia para que se puedan ver las cosas bajo.</p>
-            <footer class="footer">
-              <p class="date"><i class="bi_interface-clock"></i> June 11, 2014</p>
-              <span class="author">
-                <p>Por&nbsp;&nbsp;</p>
-                <img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448493683/qujhapblpptr30wjrj3l.jpg">
-                <P>&nbsp;ARTE MANIFIESTO</P>
-              </span>
-            </footer>
-          </article>
-        </div>
+      <div class="blog-articles-container container-2">
       </div>
-
     </div>
   </div>
 
@@ -287,5 +149,11 @@
 
 
 {% block scripts %}
-
+  <script>
+  var posts = {{data|json|safe}};
+  console.log(posts);
+  $(function() {
+    var viewer = new APP.Viewer('post', $('.container-2'), 'infinite', posts);
+  });
+  </script>
 {% endblock %}
