--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -173,6 +173,8 @@
 
 	{% include 'elements/feed-work-created.html' %}
 
+	{% include 'elements/post.html' %}
+	
 	{% include 'elements/review.html' %}
 	{% include 'elements/filterItem.html' %}
 
