--- a/app/views/blog/post.html
+++ b/app/views/blog/post.html
@@ -66,12 +66,11 @@
             <div class="grid-100">
                 <!-- <div class="inner"> -->
                     <span class="tag">TRAVEL</span>
-                    <p class="title">The Soul Of Siberia Hidden Beneath The Waters</p>
+                    <p class="title">{{post.name}}</p>
                     <div class="info">
-                        <span class="date"><i class="bi_interface-clock"></i> June 11, 2014 9:26 pm</span> &nbsp; &nbsp; &nbsp;
+                        <span class="date"><i class="bi_interface-clock"></i> {{post.createdAt|date("d/m/Y")}}</span> &nbsp; &nbsp; &nbsp;
                         <span class="social"><i class="fa fa-heart"></i> 54</span> &nbsp; &nbsp;
                         <span class="social"><i class="fa fa-comment"></i> 12</span> &nbsp; &nbsp;
-                        <a class="share">93 shares <i class="bi_web-download"></i></a>
                     </div>
                 <!-- </div> -->
             </div>
@@ -92,13 +91,8 @@
     <div class="grid-container">
         <div class="grid-100">
             <div class="blog-single-socials">
-                <div class="tags">
-                    <span class="tag">TRAVEL</span>&nbsp;
-                    <span class="tag">BAIKAL</span>&nbsp;
-                    <span class="tag">LAKE</span>
-                </div>
                 <div class="buttons">
-                    <a href="#" class="button white"><i class="fa fa-heart"></i>&nbsp;&nbsp; LIKE &nbsp;&nbsp;<span>2</span></a>
+                    <a href="#" class="button white"><i class="fa fa-heart"></i>&nbsp;&nbsp; LIKE &nbsp;&nbsp;<span>{{post.likes}}</span></a>
                     <a href="#" class="button blue"><i class="fa fa-facebook"></i>&nbsp;&nbsp; SHARE</a>
                     <a href="#" class="button sky-blue"><i class="fa fa-twitter"></i>&nbsp;&nbsp; TWEET</a>
                 </div>
@@ -109,10 +103,16 @@
     <div class="grid-container">
         <div class="grid-100">
             <div class="blog-single-user">
-                <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_diegorossell.jpg">
+                <img src="{{post.User.photo}}">
                 <div class="info">
-                    <p class="name">ARTE MANIFIESTO</p>
-                    <p class="description">Equipo de redacción de artemanifiesto.com, no somos muchos pero somos los que somos.</p>
+                    <p class="name">
+                      {% if post.User.typeName === 1 %}
+    										{{post.User.fullname}}
+    									{% else %}
+    										{{post.User.pseudonimo}}
+    									{% endif %}
+                    </p>
+                    <p class="description">{{post.User.biography}}</p>
                 </div>
                 <a class="button"> + SEGUIR</a>
             </div>
