--- a/app/views/partials/elements/post.html
+++ b/app/views/partials/elements/post.html
@@ -8,7 +8,7 @@
             <p class="title"><%=name%></p>
             <div class="stats u-margin-top-15">
               <p><i class="fa fa-heart"></i>&nbsp;&nbsp;<%= likes %></p>
-              <p><i class="fa fa-comment"></i>&nbsp;&nbsp;<%=views%></p>
+              <p><i class="fa fa-comment"></i>&nbsp;&nbsp;<%=reviews%></p>
             </div>
           </div>
         </header>
