--- a/app/views/blog/post.html
+++ b/app/views/blog/post.html
@@ -178,7 +178,7 @@
 
 <script>
   var post = {{post|json|safe}};
-  console.log(post);
+  console.log({{posts|json|safe}});
     $(function () {
         var editor = new MediumEditor('.editable', {
             buttonLabels: 'fontawesome',
