--- a/app/views/blog/post.html
+++ b/app/views/blog/post.html
@@ -1,49 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Post nuevo</title>
-    <link rel="stylesheet" href="/demo.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css">
-    <link rel="stylesheet" href="/default.css">
-    <link rel="stylesheet" href="/medium-editor-insert-plugin.css">
-</head>
-<body>
-<div id="container">
-    {{ cloudinary.uploader.image_upload_tag('photo', {callback: cloudinary_cors, return_delete_token: true, html: {
-    style: "width:230px;height:55px;top:-70px;left: 105px;" } })}}
-
-    <div class="editable">
-      {% if post %}
-        {{postBody|safe}}
-      {% endif %}
-    </div>
-</div>
-
-<script src="/jquery-2.1.1.min.js"></script>
-<script src="http://linkesch.com/medium-editor-insert-plugin/bower_components/handlebars/handlebars.runtime.min.js"></script>
-
-<script src="//cdn.jsdelivr.net/medium-editor/latest/js/medium-editor.min.js"></script>
-<script src="/medium-editor-insert-plugin.js"></script>
-
-<script>
-  var post = {{post|json|safe}};
-  console.log(post);
-    $(function () {
-        var editor = new MediumEditor('.editable', {
-            buttonLabels: 'fontawesome',
-            toolbar: false,
-            spellcheck: false,
-            disableEditing: true
-        });
-    });
-</script>
-</body>
-</html>
- -->
-
-
 {% extends '../partials/base.html' %}
 {% set path = '' %}
 
@@ -124,42 +78,6 @@
             <div class="grid-100">
                 <p class="title">Artículos populares</p>
                 <div class="articles">
-                    <div class="article">
-                        <div class="image" style="background-image: url('/img/oto blog 1.png')">
-                            <span class="tag orange">EXPLORERS</span>
-                        </div>
-                        <div class="info">
-                            <div class="title">Style Essay: The Rise And Fall Of The Dress Code</div>
-                            <div class="description">Wear on a night out has never been more complicated</div>
-                        </div>
-                    </div>
-                    <div class="article">
-                        <div class="image" style="background-image: url('/img/oto blog 1.png')">
-                            <span class="tag green">SCIENCE</span>
-                        </div>
-                        <div class="info">
-                            <div class="title">Robot’s Penguin Disguise Keeps Birds Calm</div>
-                            <div class="description">Wear on a night out has never been more complicated</div>
-                        </div>
-                    </div>
-                    <div class="article">
-                        <div class="image" style="background-image: url('/img/oto blog 1.png')">
-                            <span class="tag purple">SCIENCE</span>
-                        </div>
-                        <div class="info">
-                            <div class="title">Where To Get Stuffed In The Capital</div>
-                            <div class="description">Wear on a night out has never been more complicated</div>
-                        </div>
-                    </div>
-                    <div class="article">
-                        <div class="image" style="background-image: url('/img/oto blog 1.png')">
-                            <span class="tag blue">TRAVEL</span>
-                        </div>
-                        <div class="info">
-                            <div class="title">6 Of The Best Private Members’ Clubs </div>
-                            <div class="description">Wear on a night out has never been more complicated</div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -178,7 +96,7 @@
 
 <script>
   var post = {{post|json|safe}};
-  console.log({{posts|json|safe}});
+  var posts = {{posts|json|safe}};
     $(function () {
         var editor = new MediumEditor('.editable', {
             buttonLabels: 'fontawesome',
@@ -186,6 +104,8 @@
             spellcheck: false,
             disableEditing: true
         });
+
+        var viewer = new APP.Viewer('postMinimal', $('.articles'), null, posts);
     });
 </script>
 
