--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -174,7 +174,8 @@
 	{% include 'elements/feed-work-created.html' %}
 
 	{% include 'elements/post.html' %}
-	
+	{% include 'elements/post-minimal.html' %}
+
 	{% include 'elements/review.html' %}
 	{% include 'elements/filterItem.html' %}
 
