add city and country

--- a/app/views/partials/elements/table-user-item.html
+++ b/app/views/partials/elements/table-user-item.html
@@ -3,6 +3,8 @@
     <td><img src='<%=photo%>' width="35"></td>
     <td><a href="http://am.local:3000/user/<%=username%>"><%=username%></a></td>
     <td><%=email%></td>
+    <td><%=city%></td>
+    <td><%=country%></td>
     <td><% if(isArtist) { %> si <% } else { %> no <% } %></td>
     <td><% if(verified) { %> si <% } else { %> no <% } %></td>
     <td><% if(filled) { %> si <% } else { %> no <% } %></td>
