--- a/app/views/report/users.html
+++ b/app/views/report/users.html
@@ -27,6 +27,8 @@
         <ul class="dropdown-menu">
           <li><a class="username">username</a></li>
           <li><a class="email">email</a></li>
+          <li><a class="city">ciudad</a></li>
+          <li><a class="country">pais</a></li>
           <li role="separator" class="divider"></li>
           <li><a class="isArtist">artista</a></li>
           <li><a class="verified">verificado</a></li>
@@ -50,6 +52,8 @@
         <th></th>
         <th>username</th>
         <th>correo</th>
+        <th>ciudad</th>
+        <th>pais</th>
         <th>artista</th>
         <th>verificado</th>
         <th>completo</th>
@@ -160,6 +164,8 @@
       switch(text) {
         case 'username':term = 'username';break;
         case 'email':term = 'email';break;
+        case 'ciudad':term = 'city';break;
+        case 'pais':term = 'country';break;
         case 'artista':term = 'isArtist';break;
         case 'verificado':term = 'verified';break;
         case 'completo':term = 'filled';break;
