--- a/app/views/blog/post.html
+++ b/app/views/blog/post.html
@@ -73,6 +73,41 @@
         </div>
     </div>
 
+<div class="grid-container reviews-container  hide " style="display: block;">
+      <div class="grid-100">
+        <div class="reviews">
+          <p class="title" style="margin-top: 30px;">Comentarios &nbsp;&nbsp;<span>1</span></p>
+          <div class="u-separator"></div>
+          <div class="reviews-items-container">
+          <div class="review">
+    <div class="avatar"><img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1449600217/wuduga4vwpjtfoxcsnib.jpg"></div>
+    <div class="content">
+      <div class="info">
+        <p class="name">
+
+            Julio Cesar Canares Garcia
+
+        </p>&nbsp;&nbsp;&nbsp;
+        <p class="date"><i class="bi_interface-clock"></i> a month ago</p>
+      </div>
+      <p class="text">Pajasa :D</p>
+    </div>
+  </div></div>
+
+
+            <div class="review">
+              <div class="avatar"><img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70/am_avatar.jpg"></div>
+              <form class="content review-form">
+                <input type="hidden" name="idWork" value="20654">
+                <textarea class="value-input" name="value"></textarea>
+                <button>AGREGAR REVIEW</button>
+              </form>
+            </div>
+
+        </div>
+      </div>
+    </div>
+
     <div class="blog-single-popular">
         <div class="grid-container">
             <div class="grid-100">
