--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4062,6 +4062,8 @@ white = #fff
 		color #666d70
 		line-height 1.15
 		padding 15px 20px
+		// background red
+		height 66px
 	.footer
 		display flex
 		align-items center
